# regex-scraper

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  main.py  pyproject.toml
include/: fetch_url.hpp  menu.hpp  regex_core.hpp
src/: fetch_url.cpp  main.cpp  menu.cpp  regex_core.cpp
src/cli/: menu.py
src/scraper/base/: base_scraper.py  html_parser.py
src/scraper/wikipedia/: wikipedia_parser.py  wikipedia_scraper.py
src/utils/: constants.py  validators.py
